crates/claim-hub/src/api/snapshots/claim_hub__api__tests__snapshot_dossier.snap
---
source: crates/claim-hub/src/api/tests.rs
expression: json
---
{
  "as_of": {
    "clock": "2026-07-20T00:00:00Z",
    "ledger_head": 1,
    "registry_version": 1
  },
  "checks": [
    {
      "digest": "e80b6975747b9a9ee29749fb2d38c7e3c6aead0497b95c69d95485f64fd01f10",
      "index": 0
    }
  ],
  "commit": "seedcommit",
  "history": [
    {
      "check": {
        "digest": "e80b6975747b9a9ee29749fb2d38c7e3c6aead0497b95c69d95485f64fd01f10",
        "index": 0
      },
      "commit": "abc1234",
      "evidence": "libfoo==4.2",
      "producer": {
        "repository": "acme/payments",
        "run": "run-1"
      },
      "reported_at": "2026-07-18T00:00:00Z",
      "seq": 1,
      "verdict": "held"
    }
  ],
  "id": "payments/pin",
  "standing": {
    "due_at": null,
    "id": "payments/pin",
    "skips": [],
    "stale_at": "2026-08-17T00:00:00Z",
    "standing": "verified",
    "store": "github.com/acme/payments",
    "verified_as_of": "2026-07-18T00:00:00Z"
  },
  "statement": "The statement.",
  "store": "github.com/acme/payments",
  "supports": [
    "decision:pin"
  ]
}
